[gd_scene load_steps=8 format=3 uid="uid://baru5v63yham2"]

[ext_resource type="Script" path="res://Cutscenes/games/mr_c_game.gd" id="1_dnosj"]
[ext_resource type="PackedScene" uid="uid://qnttl6isq1ww" path="res://sfx.tscn" id="3_1fywk"]
[ext_resource type="Texture2D" uid="uid://cadd6ujv5o7tf" path="res://assets/Other/95window.webp" id="3_cxeg8"]

[sub_resource type="Gradient" id="Gradient_qoaqp"]
offsets = PackedFloat32Array(0, 0.239316, 0.794872, 0.974359, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.75641, 0.75641, 0.75641, 1, 0.750004, 0.750004, 0.750004, 1, 0.652078, 0.652078, 0.652078, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gg33g"]
noise_type = 4
seed = 1
frequency = 0.4035

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jmcbh"]
width = 20
height = 20
normalize = false
color_ramp = SubResource("Gradient_qoaqp")
noise = SubResource("FastNoiseLite_gg33g")

[sub_resource type="Theme" id="Theme_lhanq"]
/colors/otherthing = Color(1, 1, 1, 1)
/colors/thing = Color(0.0352941, 0.0352941, 0.0352941, 1)
Button/colors/font_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 31

[node name="Mr C game" type="Node2D"]
script = ExtResource("1_dnosj")

[node name="window" type="Sprite2D" parent="."]
scale = Vector2(1, 0.87)
texture = ExtResource("3_cxeg8")
centered = false

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(920, 354)
gravity_scale = 1.66533e-16

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
scale = Vector2(12.42, 23.585)
texture = SubResource("NoiseTexture2D_jmcbh")

[node name="Label" type="Label" parent="RigidBody2D"]
offset_left = -87.0
offset_top = -219.0
offset_right = -11.0
offset_bottom = -196.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "JasperLazy"

[node name="instructions" type="Label" parent="RigidBody2D"]
offset_left = -111.0
offset_top = -132.0
offset_right = 116.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "This is a test"
autowrap_mode = 3

[node name="ok" type="Button" parent="RigidBody2D"]
offset_left = -25.0
offset_top = 172.0
offset_right = 24.0
offset_bottom = 222.0
theme = SubResource("Theme_lhanq")
theme_override_font_sizes/font_size = 30
text = "Ok"

[node name="Button1" type="Button" parent="."]
visible = false
offset_left = 107.0
offset_top = 191.0
offset_right = 248.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 55
text = "1"

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 352.0
offset_top = 190.0
offset_right = 493.0
offset_bottom = 274.0
theme_override_font_sizes/font_size = 55
text = "2
"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 109.0
offset_top = 338.0
offset_right = 250.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 55
text = "3
"

[node name="Button4" type="Button" parent="."]
visible = false
offset_left = 354.0
offset_top = 334.0
offset_right = 495.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 55
text = "4"

[node name="sfx" parent="." instance=ExtResource("3_1fywk")]
position = Vector2(209, 49)
